localization/v2.5.x/site/en/userGuide/search-query-get/boolean/array-operators.md
---
id: array-operators.md
summary: >-
  Milvus provides powerful operators to query array fields, allowing you to
  filter and retrieve entities based on the contents of arrays. ​
title: Array Operators
---
<h1 id="ARRAY-Operators​" class="common-anchor-header">ARRAY Operators​<button data-href="#ARRAY-Operators​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Milvus provides powerful operators to query array fields, allowing you to filter and retrieve entities based on the contents of arrays. ​</p>
<div class="alert note">
<p>All elements within an array must be the same type, and nested structures within arrays are treated as plain strings. Therefore, when working with ARRAY fields, it is advisable to avoid excessively deep nesting and ensure that your data structures are as flat as possible for optimal performance.​</p>
</div>
<h2 id="Available-ARRAY-Operators​" class="common-anchor-header">Available ARRAY Operators​<button data-href="#Available-ARRAY-Operators​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The ARRAY operators allow for fine-grained querying of array fields in Milvus. These operators are:​</p>
<ul>
<li><p><a href="#ARRAY_CONTAINS"><code translate="no">ARRAY_CONTAINS(identifier, expr)</code></a>: checks if a specific element exists in an array field.​</p></li>
<li><p><a href="#ARRAY_CONTAINS_ALL"><code translate="no">ARRAY_CONTAINS_ALL(identifier, expr)</code></a>: ensures that all elements of the specified list are present in the array field.​</p></li>
<li><p><a href="#ARRAY_CONTAINS_ANY"><code translate="no">ARRAY_CONTAINS_ANY(identifier, expr)</code></a>: checks if any of the elements from the specified list are present in the array field.​</p></li>
<li><p><a href="#ARRAY_LENGTH"><code translate="no">ARRAY_LENGTH(identifier, expr)</code></a>: allows you to filter entities based on the number of elements in an array field.​</p></li>
</ul>
<h2 id="ARRAYCONTAINS​" class="common-anchor-header">ARRAY_CONTAINS​<button data-href="#ARRAYCONTAINS​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The <code translate="no">ARRAY_CONTAINS</code> operator checks if a specific element exists in an array field. It’s useful when you want to find entities where a given element is present in the array.​</p>
<p><strong>Example</strong>​</p>
<p>Suppose you have an array field <code translate="no">history_temperatures</code>, which contains the recorded lowest temperatures for different years. To find all entities where the array contains the value <code translate="no">23</code>, you can use the following filter expression:​</p>
<pre><code translate="no" class="language-python"><span class="hljs-built_in">filter</span> = <span class="hljs-string">&#x27;ARRAY_CONTAINS(history_temperatures, 23)&#x27;</span>​

<button class="copy-code-btn"></button></code></pre>
<p>This will return all entities where the <code translate="no">history_temperatures</code> array contains the value <code translate="no">23</code>.​</p>
<h2 id="ARRAYCONTAINSALL​" class="common-anchor-header">ARRAY_CONTAINS_ALL​<button data-href="#ARRAYCONTAINSALL​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The <code translate="no">ARRAY_CONTAINS_ALL</code> operator ensures that all elements of the specified list are present in the array field. This operator is useful when you want to match entities that contain multiple values in the array.​</p>
<p><strong>Example</strong>​</p>
<p>If you want to find all entities where the <code translate="no">history_temperatures</code> array contains both <code translate="no">23</code> and <code translate="no">24</code>, you can use:​</p>
<pre><code translate="no" class="language-python"><span class="hljs-built_in">filter</span> = <span class="hljs-string">&#x27;ARRAY_CONTAINS_ALL(history_temperatures, [23, 24])&#x27;</span>​

<button class="copy-code-btn"></button></code></pre>
<p>This will return all entities where the <code translate="no">history_temperatures</code> array contains both of the specified values.​</p>
<h2 id="ARRAYCONTAINSANY​" class="common-anchor-header">ARRAY_CONTAINS_ANY​<button data-href="#ARRAYCONTAINSANY​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The <code translate="no">ARRAY_CONTAINS_ANY</code> operator checks if any of the elements from the specified list are present in the array field. This is useful when you want to match entities that contain at least one of the specified values in the array.​</p>
<p><strong>Example</strong>​</p>
<p>To find all entities where the <code translate="no">history_temperatures</code> array contains either <code translate="no">23</code> or <code translate="no">24</code>, you can use:​</p>
<pre><code translate="no" class="language-python"><span class="hljs-built_in">filter</span> = <span class="hljs-string">&#x27;ARRAY_CONTAINS_ANY(history_temperatures, [23, 24])&#x27;</span>​

<button class="copy-code-btn"></button></code></pre>
<p>This will return all entities where the <code translate="no">history_temperatures</code> array contains at least one of the values <code translate="no">23</code> or <code translate="no">24</code>.​</p>
<h2 id="ARRAYLENGTH​" class="common-anchor-header">ARRAY_LENGTH​<button data-href="#ARRAYLENGTH​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The <code translate="no">ARRAY_LENGTH</code> operator allows you to filter entities based on the number of elements in an array field. This is useful when you need to find entities with arrays of a certain length.​</p>
<p><strong>Example</strong>​</p>
<p>If you want to find all entities where the <code translate="no">history_temperatures</code> array has fewer than 10 elements, you can use:​</p>
<pre><code translate="no" class="language-python"><span class="hljs-built_in">filter</span> = <span class="hljs-string">&#x27;ARRAY_LENGTH(history_temperatures) &lt; 10&#x27;</span>​

<button class="copy-code-btn"></button></code></pre>
<p>This will return all entities where the <code translate="no">history_temperatures</code> array has fewer than 10 elements.​</p>
